--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chai": "^4.2.0",
     "express": "^4.17.1",
     "mocha": "^8.2.1",
+    "nodemon": "^2.0.6",
     "promise": "^8.1.0",
     "router": "^1.3.5",
     "supertest": "^6.0.1"
