--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "express": "^4.17.1",
     "mocha": "^8.2.1",
+    "mongoose": "^5.10.15",
     "nodemon": "^2.0.6",
     "promise": "^8.1.0",
     "router": "^1.3.5",
