--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "mocha": "^8.2.1",
     "mongoose": "^5.10.15",
+    "mongoose-unique-validator": "^2.0.3",
     "nodemon": "^2.0.6",
     "promise": "^8.1.0",
     "router": "^1.3.5",
