--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "1.0.0",
   "description": "___        ______     ____ _                 _  ___           / \\ \\      / / ___|   / ___| | ___  _   _  __| |/ _ \\         / _ \\ \\ /\\ / /\\___ \\  | |   | |/ _ \\| | | |/ _` | (_) |       / ___ \\ V  V /  ___) | | |___| | (_) | |_| | (_| |\\__, |      /_/   \\_\\_/\\_/  |____/   \\____|_|\\___/ \\__,_|\\__,_|  /_/   -----------------------------------------------------------------",
   "main": "index.js",
+  "proxy": "http://localhost:8081",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "client": "cd diary-front-end && npm start",
+    "dev": "concurrently \"nodemon app.js\" \"npm run client\""
   },
   "author": "Kirsty M",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
+    "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "heroku": "^7.47.3",
     "mocha": "^8.2.1",
